package model;

public abstract class Usuario {

    private String nome;
    private String email;

    abstract void login();
}